2001-09-07  Oliver Nee  <o.nee@t-online.de>
	    Sam Steingold  <sds@gnu.org>

	* lispbibl.d: translated half of the comments

2001-09-06  Sam Steingold  <sds@gnu.org>

	* macros1.lisp (case-expand): new function
	(case): use it
	(fcase): new macro

2001-09-05  Sam Steingold  <sds@gnu.org>

	* reploop.lisp (debug-backtrace): print the number of frames
	* debug.d (SHOW-STACK): return the number of frames examined

2001-09-05  Sam Steingold  <sds@gnu.org>

	* install.lisp (add-fas-file, add-mem-file): set the default action

2001-08-30  Sam Steingold  <sds@gnu.org>

	* lispbibl.d (nonreturning_function): [MICROSOFT] __declspec(noreturn)

2001-08-30  Sam Steingold  <sds@gnu.org>

	* pathname.d (MERGE-PATHNAMES): when physical directories do not
	match, check for unbound directory in pathname

2001-08-29  Sam Steingold  <sds@gnu.org>

	* pathname.d (assure_dir_exists): [WIN32_NATIVE] signal an error
	when the path is invalid

2001-08-29  Sam Steingold  <sds@gnu.org>

	more ANSI compliance pathnames wrt HOSTS & VERSIONS
	* constobj.d (semicolon_string, zero_string): added for the
	benefit of VERSION pathname component
	* pathname.d (PARSE-NAMESTRING): fixed HOST handling
	(pathname_version_maybe, pathname_host_maybe,
	pathname_device_maybe): new convenience macros
	(subdir_namestring_parts): take an additional logp arg
	(host_namestring_parts, directory_namestring_parts):
	handle logical pathnames
	(nametype_namestring_parts): separate version with ".", not ";"
	(directory_namestring): do not add host
	(FILE-NAMESTRING, DIRECTORY-NAMESTRING, HOST-NAMESTRING,
	ENOUGH-NAMESTRING, NAMESTRING): handle logical pathnames
	(defaults_pathname): permit logical *DEFAULT-PATHNAME-DEFAULTS*
	(merge_dirs): new function
	(MERGE-PATHNAMES): use it; handle versions better
	(MAKE-PATHNAME): handle defaults early; pass UNBOUND instead of
	NIL to MERGE-PATHNAMES as default version

2001-08-27  Sam Steingold  <sds@gnu.org>

	* makemake.in (testsuite): add on all platforms
