@@ -1,3 +1,8 @@
+2001-09-07  Sam Steingold  <sds@gnu.org>
+
+	* lispbibl.d, error.d, genclisph.d (conditiontype):
+	renamed to `condition_t'
+
 2001-09-07  Oliver Nee  <o.nee@t-online.de>
 	    Sam Steingold  <sds@gnu.org>
 
